# CVToolbox

./: Filter.py  Gaussian.py  README.md  imadjust.py  imtool.py  intrans.py  pca.py  pyramid.py  rof.py
Calibration/: Calibration.py  README.md  intrinsics.py
Calibration/Complete/: Calibration.py  README.md  createCalibratePaper.py  test.py
Datasets/: CrawlerGoogleLensImageSearcher.py  LAIONRetrieval.py  ScraperDownloadImage.py  process_ImageAssistant.py  process_data.py
Datasets/DiffusionFake/: main.py  split.py
Datasets/download/delle/: delle.txt
Datasets/imagen_laion/: imagen.txt
Datasets/mj_laion/: mj.txt
Detector/: HarrisCorner.py
Detector/det_des/: drawmatch_libtorch.cpp  orb.py  rfnet.py
Detector/det_des/DeepLocalFeature-master/: LF.pptx  README.md
Detector/det_des/DeepLocalFeature-master/DatasetsBuilder/: __init__.py  dataset_tools.py  generate_tfrecord.py  generaterAndReadTfrecord.ipynb  sfmdataset.py  spatial_transformer.py  test_inplane_rotat.ipynb
Detector/det_des/DeepLocalFeature-master/DatasetsBuilder/.ipynb_checkpoints/: camera_trans-checkpoint.ipynb  generaterAndReadTfrecord-checkpoint.ipynb  read_tfrecords-checkpoint.ipynb  test_read_tfrecords-checkpoint.ipynb  test_tf-checkpoint.ipynb  test_tf_train-checkpoint.ipynb  test_tfrecord_generater-checkpoint.ipynb  test_torch_network-checkpoint.ipynb
Detector/det_des/DeepLocalFeature-master/DatasetsBuilder/parseScanData/: SensorData.py  parse.py  reader.py
Detector/det_des/DeepLocalFeature-master/Scripts/: tenssorflow.ipynb  test_torch_patch.ipynb  test_warp_view.ipynb
Detector/det_des/DeepLocalFeature-master/Scripts/.ipynb_checkpoints/: inverse_warp_view_2_to_1-checkpoint.ipynb  tenssorflow-checkpoint.ipynb
Detector/det_des/DeepLocalFeature-master/models/pytorch_network/: resnet_detector.py  simple_desc.py
Detector/det_des/DeepLocalFeature-master/notebook/: README.md
Detector/det_des/DeepLocalFeature-master/notebook/Scripts/: inverse_warp_view_2_to_1.ipynb  pose.txt  tensorflow.ipynb
Detector/det_des/DeepLocalFeature-master/notebook/Scripts/.ipynb_checkpoints/: test_torch_patch-checkpoint.ipynb
Detector/det_des/DeepLocalFeature-master/notebook/tf/: test.ipynb  test_tf.ipynb  test_tf_train.ipynb  test_train.ipynb
Detector/det_des/DeepLocalFeature-master/notebook/torch/.ipynb_checkpoints/: test_torch_network-checkpoint.ipynb
Detector/det_des/DeepLocalFeature-master/utils/: buildTrainNetwork.py  getConfig.py  one_epoch.ipynb  one_epoch.py  train_lfnet.py
Detector/det_des/DeepLocalFeature-master/utils/.ipynb_checkpoints/: one_epoch-checkpoint.ipynb
Detector/det_des/RFNet_JIT-master/: README.md
Detector/det_des/RFNet_JIT-master/DBoW2/: CMakeLists.txt
Detector/det_des/RFNet_JIT-master/DBoW2/demo/: create_rfvoc.cpp  demo.cpp
Detector/det_des/RFNet_JIT-master/DBoW2/include/DBoW2/: RFNet.h  RFNetHandle.h
Detector/det_des/RFNet_JIT-master/DBoW2/src/: RFNet.cpp  RFNetHandle.cpp
Detector/det_des/RFNet_JIT-master/rfnet/: JIT.py  new_train.py  train.py  train.sh
Detector/det_des/RFNet_JIT-master/rfnet/model/: rf_des.py  rf_det.py  rf_det_so.py
Detector/det_des/RFNet_JIT-master/rfnet/utils/: eval_utils.py  image_utils.py
Detector/det_des/orb_slam/: CMakeLists.txt  main.cpp  orb_slam.py
Detector/det_des/rfnet_slam/: main.cpp  myORBextractor.cpp  myORBextractor.h
DrawFigures/: Flops&Accuracy.py  README.md  drawFig.ipynb  drawFigure.py
FittingGrouping/: README.md
FittingGrouping/Hough/: Hough.py
MultiViewGeometry/: calcHomograpyh.py  homography.py
OpticalFlow/: CMakeLists.txt  LKOF.cpp  LKOpticalFlow.py  OF.cpp  README.md  opt_flow.py  visualize.py
VO/: LF-Net_test.py  LK.py  LK_test.py  README.md  test.py  visual_odometry.py
VO/SFM/: compareDe2EnPoints.ipynb  npz2Txt.py  showpose.py  splitdata.py
VO/SFM/opensfm/: features.py
VO/SFM/opensfm/commands/: detect_features.py
benchmark/: copy.py
benchmark/FLOPS/: cross.py  operations.py  our.py  rfnet.py
benchmark/FLOPS/layers/: misc.py
benchmark/Repeatability/: d2net_repeatability.py  hand_craft_repeatability.py  lfnet_repeatability.py  our_repeatability.py  rfnet_repeatability.py
benchmark/Speed/: calspeed.py
benchmark/drawMatchingResults/: orb.py  our.py  rfnet.py  sift.py
benchmark/evaluation/: eval_tool.py  extract_rfnet_features.py  extract_sift_features.py
benchmark/evaluationMMA/: eval_tool.py  extract_Our1060_features.py  extract_d2net_features.py  extract_lfnet_features.py  extract_orb_features.py  extract_rfnet_features.py  extract_sift_features.py
stereo/: stereo.py  stereoconfig.py
